# HitboxPerformance

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/HitboxPerformance/: App.hpp  Constants.hpp  Hitbox.hpp  RendererState.hpp  SpatialHashmap.hpp
src/: App.cpp  Hitbox.cpp  RendererState.cpp  SpatialHashmap.cpp  main.cpp
